[tool.poetry]
name = "repl_python3_AIO-Discord-Bot"
version = "0.1.0"
description = ""
authors = ["SohumSikdar1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
pytimeparse = "^1.1.8"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
